# kartoteka-bot

./: Cargo.toml  readme.md
assets/: form.css  history.html  index.html  main.css  main.js  report.html
migrations/: 20260416052810_create_bots_table.sql
src/: database.rs  handlers.rs  main.rs  models.rs
