[package]
name = "kartoteka-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tower-http = { version = "0.6.8", features = ["fs"] }
dotenvy = "0.15.7"
